tests/parse/fail/illegal-70.dcf
// This is a program from 2022 that should no longer work under the new grammar in 2023
// since we removed the ternary operator

void main() {
  int x;
  x = true ? 1 : 2;
  x = (true == false) ? 1 + 2 : 3 + 4;
  x = (true ? (true ? (true ? 1 : (true ? 2 : 3)) : 4) : (false ? 4 : (true ? 5 : 6)));
  x = true ? true ? true ? 1 : true ? 2 : 3 : 4 : false ? 4 : true ? 5 : 6;
}